<resources>
    <string name="app_name">brurista</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="action_settings">Settings</string>

    <string name="espresso">Espresso</string>
    <string name="americano">Americano</string>

    <string name="new_drink_copy">Some text about it being your first drink.</string>
    <string name="new_phone_copy">Tap your phone to create an account!</string>
    <string name="new_number_copy">Enter your phone number:</string>

    <string name="start_brew">Start Brew</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="done">Done</string>

    <string name="unit_degrees">%1$d °C</string>
    <string name="unit_bars">%1$d bar</string>
    <string name="unit_seconds">%1$ds</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pi_ip_address">127.0.0.1</string>
    <string name="title_activity_utility">UtilityActivity</string>

</resources>
