<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical" android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_large"
        android:text="@string/new_drink_copy"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@drawable/white_box"
        android:hint="Drink Name"
        android:id="@+id/name"
        android:gravity="center"
        android:textSize="@dimen/text_medium"
        android:padding="@dimen/activity_margin"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="textCapWords">
    </EditText>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="0dp"
            android:layout_height="128dp"
            android:layout_weight=".3"
            android:background="@drawable/white_box"
            android:gravity="center"
            android:text="@string/espresso"
            android:textColor="@android:color/white"
            android:id="@+id/brew_button_espresso"
            android:textSize="@dimen/text_medium"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="128dp"
            android:layout_weight=".3"
            android:background="@drawable/white_box"
            android:gravity="center"
            android:text="@string/americano"
            android:textColor="@android:color/white"
            android:id="@+id/brew_button_americano"
            android:textSize="@dimen/text_medium"/>

    </LinearLayout>

</LinearLayout>